# nexusdi

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/api/: core.md  decorators.md  exceptions.md  scanning.md
docs/examples/: advanced.md  basic.md
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/guide/: circular.md  injection.md  lifecycle.md  scanning.md  scoped.md
src/nexusdi/: __init__.py
src/nexusdi/core/: __init__.py  container.py  lifecycle.py  proxy.py
src/nexusdi/decorators/: __init__.py  injection.py  lifecycle.py
src/nexusdi/exceptions/: __init__.py  errors.py
src/nexusdi/scanning/: __init__.py  scanner.py
