[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusdi"
version = "0.1.0"
description = "A lightweight and powerful dependency injection framework for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["dependency-injection", "framework", "python", "di", "ioc"]

authors = [
    { name = "Harrison Alonso Arroyave Gaviria", email = "harrisonarroyaveg@gmail.com" }
]

maintainers = [
    { name = "Harrison Alonso Arroyave Gaviria", email = "harrisonarroyaveg@gmail.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/harrison-gaviria/nexusdi"
Documentation = "https://harrison-gaviria.github.io/nexusdi/"
Repository = "https://github.com/harrison-gaviria/nexusdi"
"Bug Tracker" = "https://github.com/harrison-gaviria/nexusdi/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexusdi = ["py.typed"]
